--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,64 +22,164 @@
   flex: 6;
 }
 
-.sidebar-container {
-  box-shadow: 1px 1px 5px 0 rgba(171,158,171,1);
-  background-color: $primary-color;
-  height: 100vh;
-  position: fixed;
-}
 
 canvas[style] {
   width: 100% !important;
 }
 
-.main-container {
-  .sidebar-container {
+.metrics {
+  display: flex;
+  flex-direction: column;
+  background: #FFFFFF;
+  border-radius: 10px;
+  position: relative;
+  margin-bottom: 15px;
 
-    height: 100vh;
-    padding: 15px;
-    background-color: $primary-color;
-    position: fixed;
+  .graph {
+    display: flex;
+    flex: 1;
 
-    > div {
-      padding-bottom: 20px;
-    }
-  }
-
-  .metrics-container {
-    .filter {
-      padding: 0 15px;
-    }
-
-    .metrics {
-      display: flex;
+    &.details {
       flex-direction: column;
+    }
 
-      .graph {
-        display: flex;
-        flex: 1;
-
-        &.details {
-          flex-direction: column;
-        }
-
-        .chart-container {
-          flex: 1;
-        }
-      }
+    .chart-container {
+      flex: 1;
     }
   }
 }
 
 .metric_tooltip {
   font-size: x-large;
+      color: white;
+      background: black;
+      border-radius: 50%;
+      height: 26px;
+      width: 26px;
+      line-height: 26px;
+      position: absolute;
+      right: 10px;
+      padding-left: 7px;
+
+}
+
+.main {padding-left:366px;}
+
+.sidebar {
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 53px;
+  width:366px;
+  float:left;
+  background-color: $primary-color;
+  height: 100vh;
+}
+
+body {
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
+  background-color: #F2F2F2;
+}
+
+html {
+  height: -webkit-fill-available;
+}
+
+main {
+  display: flex;
+  flex-wrap: nowrap;
+  height: 100vh;
+  height: -webkit-fill-available;
+  max-height: 100vh;
+  overflow-x: auto;
+  overflow-y: hidden;
+}
+
+
+
+.btn-toggle {
+  align-items: center;
+  padding-left: 5px;
+  font-weight: 600;
+  margin-left: -5px;
   color: white;
-  background:black;
-  border-radius:50%;
-  height: 26px;
-  width: 26px;
-  line-height: 26px;
-  display: inline-block;
-  text-align: center;
-  margin-right: 6px;
+  background-color: transparent;
+  border: 0;
+}
+.btn-toggle:hover,
+.btn-toggle:focus {
+  color: $primary-color !important;
+  background-color: white;
+}
+
+.btn-toggle::before {
+  width: 1.25em;
+  color: $primary-color;
+  line-height: 0;
+  content: image-url("polygon.svg");
+
+  transition: transform .35s ease;
+  transform-origin: .5em 50%;
+}
+
+.btn-toggle[aria-expanded="true"] {
+  color: white;
+}
+.btn-toggle[aria-expanded="true"]::before {
+  --transform: rotate(90deg);
+}
+
+.btn-toggle-nav a {
+  display: inline-flex;
+  padding: .1875rem .5rem;
+  margin-top: .125rem;
+  margin-left: 1.25rem;
+  text-decoration: none;
+}
+
+.btn-toggle-nav a:hover,
+.btn-toggle-nav a:focus {
+  background-color: #d2f4ea;
+
+}
+
+.list-group{
+  padding-top: 50px;
+}
+
+.rute_title{
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 21px;
+}
+
+.rute_title_grey{
+  color: #888888;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 21px;
+}
+
+.sidebar_font{
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 21px;
+}
+
+
+.title_sidebar{
+  padding-top: 48px;
+  padding-bottom: 10px;
+}
+
+.btn-secondary {
+  color: #fff;
+  background-color: #6c757d;
+  border-color: #6c757d;
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
 }
