--- a/app/views/layouts/sidebar_metrics.html.erb
+++ b/app/views/layouts/sidebar_metrics.html.erb
@@ -9,21 +9,26 @@
     <meta property="og:description" content="<%= meta_description %>" />
     <meta property="og:image" content="<%= meta_image %>" />
 
+
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <div class="container-fluid">
-      <div class="row">
-        <%= render 'shared/sidebar'%>
-        <div class='main-container col-md-10 offset-md-2'>
-          <div class="row">
-            <%= render 'layouts/navigation' %>
-          </div>
-          <%= yield %>
-        </div>
-      </div>
+
+
+    <div class="sidebar span4 hidden-phone sticky-top">
+          <%= render 'shared/sidebar'%>
     </div>
+
+    <div class="main">
+        <div class="container-fluid pb-2">
+            <div class="row-fluid">
+            <%= yield %>
+            </div>
+        </div>
+    </div>
+
+
   </body>
 </html>
