--- a/app/assets/stylesheets/metrics/_summary.scss
+++ b/app/assets/stylesheets/metrics/_summary.scss
@@ -1,7 +1,8 @@
 .summary {
   .container {
-    background-color: gainsboro;
+    background-color: white;
     margin-bottom: 1em;
+
   }
 
   .title {
@@ -11,7 +12,8 @@
   .info {
     display: flex;
     flex-direction: row;
-    padding: 0 4em;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
   }
 
   .item-list {
