--- a/app/views/code_climate/departments/_nav-filter.erb
+++ b/app/views/code_climate/departments/_nav-filter.erb
@@ -22,7 +22,7 @@
       </div>
       <div class="row">
         <div class="col-md-12 d-flex justify-content-center">
-          <%= f.button :submit, 'Submit', class: 'btn-secondary ml-1', id: 'submitButton' %>
+          <%= f.button :submit, 'Submit', class: 'btn-secondary', id: 'submitButton' %>
         </div>
       </div>
 <% end %>
