--- a/app/views/development_metrics/merge_time/_success_rate_detail.erb
+++ b/app/views/development_metrics/merge_time/_success_rate_detail.erb
@@ -2,7 +2,7 @@
   <p class='alert alert-secondary'>
     Out of <%= merge_time_success_rate[:total] %> pull requests,
     <%= merge_time_success_rate[:successful] %> were merged in the first
-    <%= merge_time_success_rate[:metric_detail][:value] %> hours.
+    <%= merge_time_success_rate[:metric_detail][:value] %> hours.1
     <a href='<%= admin_settings_path(q: { key_eq: merge_time_success_rate[:metric_detail][:name] }) %>'>
       Change this setting here.
     </a>
