--- a/app/views/development_metrics/code_climate/_code_climate_department_summary.erb
+++ b/app/views/development_metrics/code_climate/_code_climate_department_summary.erb
@@ -32,7 +32,7 @@
             <% end -%>
           </div>
           <div>
-            <%= link_to 'See report',
+            <%= link_to 'See details',
                         code_climate_department_path(department.name, filter_url_query),
                         class: 'btn btn-secondary'
             %>
