--- a/app/views/development_metrics/products/_general.erb
+++ b/app/views/development_metrics/products/_general.erb
@@ -6,7 +6,7 @@
               <div class="metrics shadow-box">
                 <div class='row'>
                   <h4 class="p-3" style='margin-left:10px;'><%= defect_escape_rate_definition && defect_escape_rate_definition[:name] %></h4>
-                  <span data-placement='right' class='metric_tooltip' style=<% if current_page?(products_development_metrics_path) %> 'margin-top: 4%;' <% else %> 'margin-top: 1.5%;' <% end %> aria-hidden='true' data-toggle='tooltip' title='<%= defect_escape_rate_definition && defect_escape_rate_definition[:explanation] %>'>?</span>
+                  <span data-placement='right' class='metric_tooltip' style="right:10px" aria-hidden='true' data-toggle='tooltip' title='<%= defect_escape_rate_definition && defect_escape_rate_definition[:explanation] %>'>!</span>
                 </div>
                 <%if current_page?(products_metrics_development_metrics_path)%>
                   <div class="metrics shadow-box">
@@ -33,7 +33,7 @@
               <div class="metrics shadow-box" style="margin-left:5%">
                 <div class='row'>
                   <h4 class="p-3" style='margin-left:10px;'><%= development_cycle_definition && development_cycle_definition[:name] %></h4>
-                  <span data-placement='right' class='metric_tooltip' style=<% if current_page?(products_development_metrics_path) %> 'margin-top: 4%;' <% else %> 'margin-top: 1.5%;' <% end %> aria-hidden='true' data-toggle='tooltip' title='<%= development_cycle_definition && development_cycle_definition[:explanation] %>'>?</span>
+                  <span data-placement='right' class='metric_tooltip' style= "right:10px" aria-hidden='true' data-toggle='tooltip' title='<%= development_cycle_definition && development_cycle_definition[:explanation] %>'>!</span>
                 </div>
                 <%if current_page?(products_metrics_development_metrics_path)%>
                   <div class="metrics shadow-box">
@@ -61,7 +61,7 @@
               <div class="metrics shadow-box" style="margin-left:5%">
                 <div class='row'>
                   <h4 class="p-3" style='margin-left:10px;'><%= planned_to_done_definition && planned_to_done_definition[:name] %></h4>
-                  <span data-placement='right' class='metric_tooltip' style=<% if current_page?(products_development_metrics_path) %> 'margin-top: 4%;' <% else %> 'margin-top: 1.5%;' <% end %> aria-hidden='true' data-toggle='tooltip' title='<%= planned_to_done_definition && planned_to_done_definition[:explanation] %>'>?</span>
+                  <span data-placement='right' class='metric_tooltip' style="right:10px"  aria-hidden='true' data-toggle='tooltip' title='<%= planned_to_done_definition && planned_to_done_definition[:explanation] %>'>!</span>
                 </div>
                 <%if current_page?(products_metrics_development_metrics_path)%>
                   <div class="metrics shadow-box">
