add partial view

--- a/app/views/pull_requests/time_to_merge_prs/index.erb
+++ b/app/views/pull_requests/time_to_merge_prs/index.erb
@@ -30,5 +30,5 @@
       <% end %>
     </div>
   </div>
-  <%= render 'shared/pull_request_list'%>
+    <%= render partial: 'shared/pull_request_list' , locals: { pull_requests: @pull_requests} %>
 </div>
