--- a/app/views/development_metrics/products_metrics.erb
+++ b/app/views/development_metrics/products_metrics.erb
@@ -10,7 +10,7 @@
   </div>
 <% end %>
 
-<div class="metrics-container container col-md-12">
+<div class="metrics-container">
   <%= render 'shared/products_metrics/nav-filter' do |f| %>
     <%= hidden_field_tag 'metric[name]', @query_metric_name  %>
     <div class="row">
