--- a/app/views/development_metrics/repositories.erb
+++ b/app/views/development_metrics/repositories.erb
@@ -1,9 +1,7 @@
 <%= render 'development_metrics/development_metrics_sidebar', enabled_users_section: @enabled_users_section %>
 
-  <div class="metrics-container container col-md-12">
-
+  <div class="metrics-container">
     <div class="row title_sidebar">
-
         <div class="col-md-6">
           <b class="rute_title_grey"><%= @repository.product[:name] +'/'%></b>
           <b class="rute_title"><%= @repository.name  if @repository.product.present? %></b>
@@ -21,11 +19,11 @@
     <% if @enabled_repository_codeowners_section %>
       <%= render('code_owners', code_owners: @code_owners) unless @code_owners.nil? %>
     <% end %>
-    <div class="row">
-      <%= render 'development_metrics/code_climate/code_climate_repository_summary', code_climate: @code_climate %>
-    </div>
+
+    <%= render 'development_metrics/code_climate/code_climate_repository_summary', code_climate: @code_climate %>
+
     <% if @repository %>
-      <div class="metrics shadow-box">
+      <div class="metrics">
         <div class='row'>
           <h4 class="p-3" style='margin-left:10px;'>
             <%= @review_turnaround_definition && @review_turnaround_definition[:name] %>
@@ -47,7 +45,7 @@
         <% end %>
       </div>
 
-      <div class="metrics shadow-box">
+      <div class="metrics">
         <div class='row'>
           <h4 class="p-3" style='margin-left:10px;'>
             <%= @merge_time_definition && @merge_time_definition[:name] %>
@@ -69,7 +67,7 @@
         <% end %>
       </div>
 
-      <div class="metrics shadow-box">
+      <div class="metrics">
         <div class='row'>
           <h4 class="p-3" style='margin-left:10px;'><%= @pull_request_size_definition && @pull_request_size_definition[:name] %></h4>
           <span data-placement='right' class='metric_tooltip' style='margin-top: 1.5%;' aria-hidden='true' data-toggle='tooltip' title='<%= @pull_request_size_definition && @pull_request_size_definition[:explanation] %>'>?</span>
@@ -85,5 +83,4 @@
         </div>
       </div>
     <% end %>
-  </div>
 </div>
