--- a/app/views/shared/_interval-filter.erb
+++ b/app/views/shared/_interval-filter.erb
@@ -1,3 +1,4 @@
+<div class="calendar-icon" style="margin-right:10px"></div>
 <%= form.input :period,
   label: 'Weeks Period',
   wrapper_html: { class: 'period-selection rute_title' },
