--- a/app/views/repositories/by_relevance/index.erb
+++ b/app/views/repositories/by_relevance/index.erb
@@ -4,7 +4,7 @@
   <div class="row">
     <div class="col-md-10 offset-1">
       <%= simple_form_for :metric, url: department_repositories_by_relevance_index_path, method: 'GET', html: {
-                                                        class: 'nav-filter p-3 shadow-box', id: 'nav-filter-form' } do |f|%>
+                                                        class: 'nav-filter p-3', id: 'nav-filter-form' } do |f|%>
             <h4 class="text-center"><%= params[:department_name].capitalize %> Overview</h4>
             <div class="row justify-content-center mt-3 mb-3">
               <%= f.input :period,
