--- a/app/views/users/external_pull_requests/_nav-filter.erb
+++ b/app/views/users/external_pull_requests/_nav-filter.erb
@@ -1,7 +1,7 @@
 <div class="col-md-10 offset-1">
   <%= simple_form_for '', url: external_pull_requests_path,
     method: 'GET', html: {
-      class: 'nav-filter p-3 shadow-box',
+      class: 'nav-filter p-3',
       id: 'nav-filter-form' } do |f|%>
         <h4 class="text-center">Contributions to external repositories</h4>
         <div class="row justify-content-start align-items-end mt-3 ml-3">
