--- a/app/views/users/repositories/index.erb
+++ b/app/views/users/repositories/index.erb
@@ -1,6 +1,6 @@
 <%=  render 'development_metrics/development_metrics_sidebar', enabled_users_section: @enabled_users_section %>
 
-<div class="metrics-container col-md-12">
+<div class="metrics-container">
   <h2 class='user-name'><%= @user.login%></h2>
   <hr>
   <span class='ml-3'>Code Owner in:</span>
