--- a/app/views/pull_requests/time_to_merge_prs/index.erb
+++ b/app/views/pull_requests/time_to_merge_prs/index.erb
@@ -1,6 +1,6 @@
 <%=  render 'development_metrics/development_metrics_sidebar', enabled_users_section: @enabled_users_section %>
-<div class="container-fluid">
-  <div class="row">
+<div class="metrics-container">
+  <div class="row title_sidebar">
     <div class="col-md-10 offset-1">
       <%= simple_form_for :metric, url: department_time_to_merge_prs_path, method: 'GET', html: {
                                                         class: 'nav-filter p-3', id: 'nav-filter-form' } do |f|%>
