--- a/app/views/shared/_pull_request_list.erb
+++ b/app/views/shared/_pull_request_list.erb
@@ -1,20 +1,22 @@
-<div class="container-fluid">
-  <div class="row p-3">
-    <div class="row p-3">
-      <div class="metrics-container container col-md-12">
-        <div class="metrics shadow-box p-3">
-        <% pull_requests.each do |range,pr| %>
-          <h6><%= range %> hours:</h6>
-          <ul>
-            <% pr.each do |pr_link| %>
-              <li>
-                <%= link_to nil, pr_link, target: '_blank' %>
-              </li>
-            <% end %>
-          </ul>
+<div class="metrics">
+  <div class="row">
+      <div class="accordion" id="accordionPullRequests">
+        <% pull_requests.each.each_with_index do |(range,pr),index| %>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="heading<%= index %>" >
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" aria-expanded="false" data-bs-target="#collapse<%= index %>" aria-controls="collapse<%= index %>">
+                <%= range %> hours
+              </button>
+            </h2>
+            <div id="collapse<%= index %>" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionPullRequests">
+              <% pr.each do |pr_link| %>
+                <div class="accordion-body pt-2 pb-1">
+                  <%= link_to nil, pr_link, target: '_blank' %>
+                </div>
+              <% end %>
+            </div>
+          </div>
         <% end %>
-        </div>
-      </div>
     </div>
   </div>
 </div>
